--- a/WebContent/assets/css/bootstrap.css
+++ b/WebContent/assets/css/bootstrap.css
@@ -1088,11 +1088,13 @@ textarea {
   font-size: inherit;
   line-height: inherit;
 }
+/*
 a {
   color: #337ab7;
   text-decoration: none;
 }
 a:hover,
+
 a:focus {
   color: #23527c;
   text-decoration: underline;
@@ -1102,6 +1104,7 @@ a:focus {
   outline: 5px auto -webkit-focus-ring-color;
   outline-offset: -2px;
 }
+*/
 figure {
   margin: 0;
 }
