--- a/WebContent/assets/css/jqbanner.css
+++ b/WebContent/assets/css/jqbanner.css
@@ -1,16 +1,18 @@
 #jqb_object img{ 
 	border: none;
+	width:100%;
 }
 
 #jqb_object { 
+	
 	position:relative;
-	max-width:700px; height:300px; 
+	max-width:100%; height:600px; 
 	overflow:hidden;
 	margin:auto;
 }
 #jqb_object .jqb_bar{
 	position:absolute;
-	max-width:700px; height: 30px;
+	max-width:100%; height: 30px;
 	left:0px;
 	bottom:0px;
 	background:#000000;
@@ -26,7 +28,7 @@
 
 #jqb_object .jqb_slide{
 	position:absolute;
-	width:100%; height:300px; 
+	width:100%; height:600px; 
 	font-family: Arial, Verdana, Sans-Serif;
 	font-weight: bold;
 	font-size: 18px;
